--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js REST API with Typescript and MongoDB",
   "main": "server.js",
   "scripts": {
+    "start": "ts-node server.ts",
     "dev": "ts-node-dev --respawn --pretty --transpile-only server.ts"
   },
   "author": "Dimitris Georgiadis",
